# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
health/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
health/migrations/: 0001_initial.py
healthProject/: asgi.py  settings.py  urls.py  wsgi.py
